--- a/ines.html
+++ b/ines.html
@@ -120,6 +120,54 @@
                             </div>
                         </div>
                     </div>
+                    <div class="kwibuka">
+                        <figure>
+                            <img src="kwibuka.PNG">
+                        </figure>
+                    </div>
+                    <div class="twiter">
+                        <p>Tweets by <a href="@">@INES-Ruhengeri</a></p>
+                    </div>
+                    <div class="im-link">
+                        <div class="in">
+                        <a href="ines-m" style="color:#717679">
+
+INES<br>
+@INES_Ruhengeri<br>
+Important Dates for #AARSE2022<br> International Conference to be held in<br> @CityofKigali-#Rwandafrom 24th-28th <br>October 2022:<br>
+- Abstract submission to 27 May 2022<br>
+- Notification of acceptance to 10 June 2022<br>
+- Full paper submission to 31 August<br> 2022  @Lands_Rwanda<br> @RwandaMFA
+                        </a>
+                        <div class="date">
+                            <a href="date" style="color:#717679;">MAY 17 2022</a>
+                        </div>
+                    </div>
+                    <div class="ines-r">
+                        <a href="ine"> INES Retweeted<br>AARSE International Conference<br>
+                            @2022Aarse<br>
+                            The 13th Conference of AARSE is now in pipeline, to be held in Kigali  on 24th- 28th<br> October. 
+                            
+                           </a>
+                    </div>
+                    <div class="lin-e">
+                        <a href="emb">
+                            embed
+                        </a>
+                    </div>
+                    <div class="lin-vie">
+                        <a href="view" style="padding-left:200px ;">View on Twitter</a>
+                    </div>
+                        
+                    </div>
+                </div>
+                <div class="apply">
+                    <h2>Apply As an International Student</h2>
+                    <span>Use the international students' portal to get admitted in INES-RUHENGERI</span>
+                   <br> <a href="" style="border: 1px solid; background-color:#c8c83a; color: #fff;">
+                         Apply Now
+                    </a>
+
                 </div>
             </div>
          </body>
