--- a/ines.html
+++ b/ines.html
@@ -169,6 +169,130 @@ Important Dates for #AARSE2022<br> International Conference to be held in<br> @C
                     </a>
 
                 </div>
-            </div>
-         </body>
+                <div class="container">
+                  <div class="current-s">
+                       <span  style="color:#e8c83a ;">3551</span><br>
+                        <p5>
+                            <a href="">Current students</a><br>
+                            overall students for undergraduate<br> and graduate programmes
+                        </p5>
+                    </div>
+                    <div class="inter-s">
+                       <span style="color:#e8c83a ;">211</span> <br>
+                        <p>
+                        <a href="">International students</a><br>
+                        International students for<br> undergraduate and graduate<br> programmes
+                    </p>
+                    </div>
+                    <div class="current-g">
+                       <span style="color:#e8c83a ;">872</span> <br>
+                        <p>
+                        <a href="">Current graduates</a><br>
+                        undergraduate and graduate students<br> of 2021 class
+                    </p>
+                    </div>
+                    <div class="total-g">
+                       <span style="color:#e8c83a ;"> 9277</span><br>
+                        <p>
+                        <a href="">Total graduates</a><br>
+                        churned to the labor market by 13th<br> graduation
+                    </p>
+                    </div>
+                 </div>
+                 <div class="seven">
+                     <div class="apply">
+                         <p>
+                            Apply in Today's intake
+                            Fill out the application in order to apply toda
+                         </p>
+                         <a href="" >APPLY NOW</a>
+                     </div>
+                     <div class="admission">
+                         <h2>Admission Inquiries</h2>
+                         <p>Weekday AM 8:00 ~ PM 05:00</p>
+                         <h3>+250 788 732 986</h3>
+                     </div>
+                     <div class="explorar">
+                         <h2>Explore all our programs</h2>
+                         <p>Go through all our oprograms and their exit profiles</p>
+                         <a href="#">EXPLORE</a>
+                     </div>
+                 </div>
+                 <div class="about">
+                     <div class="student">
+                         <img src="girl.PNG">
+                     </div>
+                     <div class="learner">
+                         <h2>What learners say about INES</h2>
+                     </div>
+                     <div class="oli">
+                         <h4>The best advice I can offer to people who are students or aspire to be students is, study what you love and intern in what<br>you want to do. And I think it’s okay to pivot as many times as you need to. Completing my internship at INES Ruhengeri<br>personally gave me experience in the career field I want to pursue as well as also prepare me for what to expect in my field<br>and increase confidence in my work.<br>INES Ruhengeri’s programs aim to equip students with skills, knowledge, attitude and value necessary to shape and<br>embrace the future with their academic programs designed to let prospects know what they can expect from different<br>programs in terms of their exit profiles i.e. What they are able to do at the completion of the program.</h4>
+                     </div>
+                 </div>
+                 <div class="contact">
+                     <div class="adress">
+                         <h5>Address</h5>
+                         <p>Musanze, Street, NM 155<br>
+                            Musanze, Rwan</p>
+                     </div>
+                     <div class="general">
+                         <h5>General Secretary</h5>
+                         <p>+250 788 903 030<br>
+                            +250 788 903 032<br>
+                            info@ines.ac.rw</p>
+                     </div>
+                     <div class="academy">
+                         <h5>Academic Registrar</h5>
+                         <p>+250 788 732 986 <br>
+                            +250 787 489 588 <br>
+                            ensengiyumva@ines.ac.rw</p>
+                     </div>
+                     <div class="icon"></div>
+                 </div>
+             </div>
+             <div class="eight">
+                 <div class="hours">
+                     <h2>Working hours</h2>
+                 <ul>
+                     <li>Monday
+                        <span>8am - 5pm</span>
+                    </li>
+                    <li>Tuesday
+                        <span>8am - 5pm</span>
+                    </li>
+                    <li>Wednesday
+                        <span>8am - 5pm</span>
+                    </li>
+                    <li>Thursday
+                        <span>8am - 5pm</span>
+                    </li>
+                    <li>Friday
+                        <span>8am - 5pm</span>
+                    </li>
+                    <li>Saturday
+                        <span>8am - 12:30pm</span>
+                    </li>
+                    <li>Sunday
+                        <span>Closed</span>
+                    </li>
+                 </ul>
+                 </div>
+                 <div class="quick">
+                     <h2>Quick Links</h2>
+                     <ul>
+                    <li><a href="">Apply Now</a></li>
+                    <li><a href="">International Student</a></li>
+                    <li><a href="">Student Portal</a></li>
+                    <li><a href="">E-learning</a></li>
+                    <li><a href="">E-library</a></li>
+                    </ul>
+                 </div>
+                 <div class="final">
+                     <p><p>© 2022, Copyright
+                        <a href="#" class="wm-color-two">INES-RUHENGERI</a>
+                    </p>
+                 </div>
+                 </div>
+             </div>
+    </body>
 </html> 
